--- a/app/src/main/res/values/strings.xml
+++ b/app/src/main/res/values/strings.xml
@@ -1,3 +1,5 @@
 <resources>
     <string name="app_name">Coffee Shop</string>
+    <string name="is_new">Novo</string>
+    <string name="is_top_selling">Popular</string>
 </resources>
